--- a/sdks/java/pom.xml
+++ b/sdks/java/pom.xml
@@ -38,8 +38,9 @@
     <module>build-tools</module> -->
     <module>core</module>
     <!--module>io</module-->
-    <module>io/hadoop-file-system</module>
-    <module>maven-archetypes</module>
+    <module>io</module>
+    <!--module>io/hadoop-file-system</module-->
+    <!--<module>maven-archetypes</module>-->
     <module>extensions</module>
     <module>fn-execution</module>
     <!-- javadoc runs directly from the root parent as the last module
